# metadata

./: .gitignore  Cargo.toml  README.md  package.json
lib/: index.d.ts  index.js
src/: io.rs  lib.rs  types.rs
test/: test.js  test.ts
